# freezeit_cos16-fork-archive

./: .gitignore  AGENTS.md  README.md
.codebase-memory/: artifact.json
.specify/: feature.json
freezeitApp/: README.md
freezeitDaemon/: Cargo.toml
freezeitDaemon/.cargo/: config.toml
freezeitDaemon/scripts/: build-android.sh  test-host.sh
freezeitDaemon/src/: lib.rs  main.rs
freezeitDaemon/src/app/: compatibility.rs  controller.rs  error.rs  foreground.rs  freezer_backend.rs  health.rs  logging.rs  mod.rs  operation_log.rs  package_inventory.rs  scheduler.rs
freezeitDaemon/src/config/: loader.rs  migration.rs
freezeitDaemon/src/domain/: capability.rs  mod.rs  operation.rs  policy.rs  runtime.rs
freezeitDaemon/src/protocol/: manager_v1.rs  manager_v2.rs  mod.rs  xposed.rs
freezeitDaemon/src/sys/: binder.rs  cgroup.rs  mod.rs  procfs.rs  signal.rs  socket.rs  xposed_bridge.rs
freezeitDaemon/tests/contract/: compatibility_baseline.rs  foreground_classification.rs  freezer_backend_decisions.rs  manager_health_v1.rs  manager_v1_frame.rs  operation_log_json.rs  policy_loading.rs  policy_migration.rs  procfs_runtime_discovery.rs  protected_classification.rs  sys_freezer_primitives.rs  uid_reconciliation.rs  xposed_bridge_frame.rs
freezeitDaemon/tests/fixtures/: README.md
freezeitDaemon/tests/integration/: freeze_unfreeze_state.rs  recover_after_restart.rs
freezeitRelease/: README.md  changelog.txt  changelogFull.txt  update.json
freezeitVS/: .gitignore  build_arm64_linux.sh  build_pack_linux.sh  changelog.txt
scripts/: capture-rom-baseline.sh  package-release.sh  test-coloros-athena-hook.sh  test-download-freeze-deferral.sh  test-manager-ui-regressions.sh  (+9 more)
(+147 files in other folders)
